--- a/src/app/usuario/login/login.page.html
+++ b/src/app/usuario/login/login.page.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>Iniciar Sesión</ion-title>
+    <ion-title>Dr. Snake</ion-title>
   </ion-toolbar>
 </ion-header>
 
