--- a/src/app/consulta/create/create.page.html
+++ b/src/app/consulta/create/create.page.html
@@ -1,6 +1,9 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>create</ion-title>
+    <ion-buttons slot="start">
+      <ion-back-button defaultHref="/consulta-listar"></ion-back-button>
+    </ion-buttons>
+    <ion-title>Nueva Consulta</ion-title>
   </ion-toolbar>
 </ion-header>
 
