--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -16,7 +16,12 @@
           </ion-menu-toggle>
         </ion-list>
         
-
+        <ion-list >
+          <ion-item button [routerLink]="['logout']" size="full" >
+            <ion-icon slot="start" [ios]="'log-out-outline'" [md]="'log-out-outline'"></ion-icon>
+              <ion-label>Cerrar Sesion</ion-label>
+          </ion-item>
+        </ion-list>
         
 
       </ion-content>
