--- a/src/app/consulta/listar/listar.page.html
+++ b/src/app/consulta/listar/listar.page.html
@@ -10,4 +10,12 @@
 
 <ion-content>
 
+  <ion-list>
+    <ion-item *ngFor="let c of consultas" >
+      <ion-label>{{c.Nombre}} {{c.Apellido}}</ion-label>
+      <ion-note>{{c.Fecha}}</ion-note>
+    </ion-item>
+
+  </ion-list>
+
 </ion-content>
