--- a/src/app/paciente/create/create.page.html
+++ b/src/app/paciente/create/create.page.html
@@ -86,7 +86,7 @@
       </ion-select>
     </ion-item>
 
-    <ion-item button (click)="handlePhoto()"  >
+    <ion-item color="tertiary" button (click)="handlePhoto()"  >
       <ion-label >Agregar Foto</ion-label>
       <ion-icon slot="start" [ios]="'image'" [md]="'image'" ></ion-icon>
     </ion-item>
