--- a/src/app/reporte/porfecha/porfecha.page.html
+++ b/src/app/reporte/porfecha/porfecha.page.html
@@ -17,7 +17,7 @@
      
       <ion-item *ngFor="let r of reporte">
         <ion-avatar slot="start">
-          <img src="r.Foto" alt="Foto">
+          <img [src]="r.Foto" alt="Foto">
         </ion-avatar>
         <ion-label>
           <h2>
