--- a/src/app/paciente/listar/listar.page.html
+++ b/src/app/paciente/listar/listar.page.html
@@ -18,8 +18,15 @@
   </ion-fab>
   <ion-list>
     <ion-item *ngFor="let p of pacientes" button (click)="goPacienteDetails(p.Id)">
-      <ion-label>{{p.Nombre}} {{p.Apellido}}</ion-label>
-      <ion-note>{{p.Cedula}}</ion-note>
+      <ion-label>
+        <h2>
+          {{p.Nombre}} {{p.Apellido}}
+        </h2>
+        <h3>
+          {{p.Cedula}}
+        </h3>
+      </ion-label>
+      <ion-note>Ver Detalles</ion-note>
     </ion-item>
       
 
