--- a/src/app/usuario/update-user/update-user.page.html
+++ b/src/app/usuario/update-user/update-user.page.html
@@ -13,12 +13,14 @@
     <ion-item>
       <ion-label position="floating">Nombre</ion-label>
       <ion-input
+        [value]="usuario.Nombre"
         name="nombre"
       ></ion-input>
     </ion-item>
     <ion-item>
       <ion-label position="floating">Email</ion-label>
       <ion-input
+      [value]="usuario.Email"
       name="email"
       ></ion-input>
     </ion-item>
